--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,17 +2,24 @@
   .banner_content
     %h1 File Cabinet
     %p Your life's work.  Organized, always.
-    %button= link_to "Enter", new_user_registration_path
+    = button_to "Enter", new_user_session_path, :class => "button"
 
 #callouts
   .callout_inner
     .wrapper
       .callout
         %h2 Organize
-        %p Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.
+        %p
+          Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis.
+          Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris.
+          Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.
+          Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis.
+          Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris.
+          Hi mindless mortuis soulless creaturas, imo evil stalking monstra adventus resi dentevil vultus comedat cerebella viventium.
 
 #bottom_cta
   .wrapper
     %h2 Go Ahead!
     %br
-    %button= link_to "Join Now", new_user_registration_path
+    %br
+    = button_to "Join Now", user_registration_path, :class => "button"
